# software-engineering-synopsis

./: .gitignore  Ideas.md  README.md  pyproject.toml
.obsidian/: workspace.json
Architecture/: CleanArchitecture.md  README.md  lectures.md
Go/: README.md
Go/API/: README.md  Swagger.md
Python/: Books.md  Cookiecutter&Cruft.md  Poetry.md  Pyenv.md  README.md
Python/Django/: Overview.md  README.md
Python/FastAPI/: README.md
Python/MultiThreading/: Barrier.md  Daemon.md  Local.md  Lock & Rlock.md  Semaphore.md  Threading.md  Timer.md
Python/Multiprocessing/: Array.md  Barrier.md  Base Manager.md  Condition.md  Event.md  Lock & RLock.md  Manager.md  Multiprocessing.md  Pipe.md  Pool.md  Queue.md  array.py  barrier_example.py  base_manager_example_client.py  base_manager_example_server.py  condition_example.py  event_example.py  lockrlock.py  manager_example.py  mltproc.py  pl.py  que.py
Python/Utils/: Invoke.md
System Architecture/: README.md  lectures.md
