[tool.poetry]
name = "software-engineering-synopsis"
version = "0.1.0"
description = ""
authors = ["Egor Gurtyakin <egorgurtyakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
