[tool.poetry]
name = "software-engineering-synopsis"
version = "0.1.0"
description = ""
authors = ["Egor Gurtyakin <egorgurtyakin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ipython = "^9.0.2"
ipdb = "^0.13.13"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
